--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,7 +10,7 @@
         <h1 class="title">Our Menu</h1>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="section">
                         <div class="section-title bg-pink">Chicken</div>
                         <div class="section-content">
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="section">
                         <div class="section-title bg-red">Beef</div>
                         <div class="section-content">
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="section">
                         <div class="section-title bg-yellow">Sushi</div>
                         <div class="section-content">
